# beacon

./: CMakeLists.txt  README.md
include/beacon/: common.h  daemon.h  receiver.h  sender.h
src/: common.cpp  daemon.cpp  main.cpp  receiver.cpp  sender.cpp
